Configurable rds s3 secrets

--- a/distributions/aws/aws-secrets-manager/overlays/configurable-secrets/secrets_manager_patch.yaml
+++ b/distributions/aws/aws-secrets-manager/overlays/configurable-secrets/secrets_manager_patch.yaml
@@ -4,31 +4,9 @@ metadata:
   name: aws-secrets
   namespace: kubeflow
 spec:
-  provider: aws   
-  secretObjects:
-  - secretName: mysql-secret
-    type: Opaque
-    data:
-    - objectName: "user"
-      key: username
-    - objectName: "pass"
-      key: password
-    - objectName: "host"
-      key: host
-    - objectName: "database"
-      key: database
-    - objectName: "port"
-      key: port
-  - secretName: mlpipeline-minio-artifact
-    type: Opaque
-    data:
-    - objectName: "access"
-      key: accesskey
-    - objectName: "secret"
-      key: secretkey
   parameters:
     objects: | 
-      - objectName: "rds-secret"
+      - objectName: "rds-secret"  # rename secret
         objectType: "secretsmanager"
         jmesPath:
             - path: "username"
@@ -41,7 +19,7 @@ spec:
               objectAlias: "database"
             - path: "port"
               objectAlias: "port"
-      - objectName: "s3-secret"
+      - objectName: "s3-secret" # rename secret
         objectType: "secretsmanager"
         jmesPath:
             - path: "accesskey"
