--- a/distributions/aws/aws-secrets-manager/base/kustomization.yaml
+++ b/distributions/aws/aws-secrets-manager/base/kustomization.yaml
@@ -2,5 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kubeflow
 resources:
-- secrets-mount.yaml
+- deployment.yaml
 - secrets-manager.yaml
+# patchesStrategicMerge:
+# - deployment_patch.yaml
+# - secrets-manager_patch.yaml
