--- a/.github/workflows/issue-comment.yml
+++ b/.github/workflows/issue-comment.yml
@@ -6,7 +6,7 @@ jobs:
   pr_commented:
     # This job only runs for pull request comments
     name: PR comment
-    if: github.event.issue.pull_request && github.event.comment.body == "/test"
+    if: github.event.issue.pull_request && github.event.comment.body == "\/test"
     runs-on: ubuntu-latest
     steps:
       - run: |
