--- a/helm/deployment-specifics/rds-s3/rds-and-s3/kubeflow-pipelines/templates/Deployment/ml-pipeline-kubeflow-Deployment.yaml
+++ b/helm/deployment-specifics/rds-s3/rds-and-s3/kubeflow-pipelines/templates/Deployment/ml-pipeline-kubeflow-Deployment.yaml
@@ -41,12 +41,24 @@ spec:
             fieldRef:
               fieldPath: metadata.namespace
         - name: OBJECTSTORECONFIG_SECURE
-          value: 'false'
+          value: 'true'
         - name: OBJECTSTORECONFIG_BUCKETNAME
           valueFrom:
             configMapKeyRef:
               key: bucketName
               name: pipeline-install-config
+        - name: OBJECTSTORECONFIG_HOST
+          valueFrom:
+            configMapKeyRef:
+              key: minioServiceHost
+              name: pipeline-install-config
+        - name: OBJECTSTORECONFIG_REGION
+          valueFrom:
+            configMapKeyRef:
+              key: minioServiceRegion
+              name: pipeline-install-config
+        - name: OBJECTSTORECONFIG_PORT
+          value: ''
         - name: DBCONFIG_USER
           valueFrom:
             secretKeyRef:
