--- a/helm/deployment-specifics/rds-s3/rds-and-s3/kubeflow-pipelines/templates/ConfigMap/workflow-controller-configmap-kubeflow-ConfigMap.yaml
+++ b/helm/deployment-specifics/rds-s3/rds-and-s3/kubeflow-pipelines/templates/ConfigMap/workflow-controller-configmap-kubeflow-ConfigMap.yaml
@@ -1,42 +1,14 @@
 apiVersion: v1
 data:
-  artifactRepository: |
-    archiveLogs: true
-    s3:
-      endpoint: "minio-service.kubeflow:9000"
-      bucket: "mlpipeline"
-      # keyFormat is a format pattern to define how artifacts will be organized in a bucket.
-      # It can reference workflow metadata variables such as workflow.namespace, workflow.name,
-      # pod.name. Can also use strftime formating of workflow.creationTimestamp so that workflow
-      # artifacts can be organized by date. If omitted, will use "{{`{{workflow.name}}`}}/{{`{{pod.name}}`}}",
-      # which has potential for have collisions, because names do not guarantee they are unique
-      # over the lifetime of the cluster.
-      # Refer to https://kubernetes.io/docs/concepts/overview/working-with-objects/names/.
-      #
-      # The following format looks like:
-      # artifacts/my-workflow-abc123/2018/08/23/my-workflow-abc123-1234567890
-      # Adding date into the path greatly reduces the chance of {{`{{pod.name}}`}} collision.
-      keyFormat: "artifacts/{{`{{workflow.name}}`}}/{{`{{workflow.creationTimestamp.Y}}`}}/{{`{{workflow.creationTimestamp.m}}`}}/{{`{{workflow.creationTimestamp.d}}`}}/{{`{{pod.name}}`}}"
-      # insecure will disable TLS. Primarily used for minio installs not configured with TLS
-      insecure: true
-      accessKeySecret:
-        name: mlpipeline-minio-artifact
-        key: accesskey
-      secretKeySecret:
-        name: mlpipeline-minio-artifact
-        key: secretkey
-  containerRuntimeExecutor: emissary
-  executor: |
-    imagePullPolicy: IfNotPresent
-    resources:
-      requests:
-        cpu: 0.01
-        memory: 32Mi
-      limits:
-        cpu: 0.5
-        memory: 512Mi
+  config: "{\nartifactRepository:\n{\n    s3: {\n        bucket: {{ .Values.s3.bucketName }},\n\
+    \        keyPrefix: artifacts,\n        endpoint: {{ .Values.s3.minioServiceHost }},\n        insecure:\
+    \ true,\n        accessKeySecret: {\n            name: mlpipeline-minio-artifact,\n\
+    \            key: accesskey\n        },\n        secretKeySecret: {\n        \
+    \    name: mlpipeline-minio-artifact,\n            key: secretkey\n        }\n\
+    \    },\n    archiveLogs: true\n}\n}\n"
 kind: ConfigMap
 metadata:
+  annotations: {}
   labels:
     application-crd-id: kubeflow-pipelines
   name: workflow-controller-configmap
