--- a/helm/deployment-specifics/rds-s3/rds-and-s3/kubeflow-pipelines/templates/Deployment/ml-pipeline-ui-kubeflow-Deployment.yaml
+++ b/helm/deployment-specifics/rds-s3/rds-and-s3/kubeflow-pipelines/templates/Deployment/ml-pipeline-ui-kubeflow-Deployment.yaml
@@ -27,6 +27,16 @@ spec:
     spec:
       containers:
       - env:
+        - name: AWS_ACCESS_KEY_ID
+          valueFrom:
+            secretKeyRef:
+              key: accesskey
+              name: mlpipeline-minio-artifact
+        - name: AWS_SECRET_ACCESS_KEY
+          valueFrom:
+            secretKeyRef:
+              key: secretkey
+              name: mlpipeline-minio-artifact
         - name: VIEWER_TENSORBOARD_POD_TEMPLATE_SPEC_PATH
           value: /etc/config/viewer-pod-template.json
         - name: DEPLOYMENT
