--- a/helm/deployment-specifics/rds-s3/rds-and-s3/kubeflow-pipelines/values.yaml
+++ b/helm/deployment-specifics/rds-s3/rds-and-s3/kubeflow-pipelines/values.yaml
@@ -1,3 +1,8 @@
 rds:
-  dbHost: #kubeflow-db.xxxxx.ca-central-1.rds.amazonaws.com
+  dbHost: #jsitu-kubeflow-db.xxxxxx.ca-central-1.rds.amazonaws.com
   mlmdDb: #metadb
+
+s3:
+  bucketName: #jsitu-s3-bucket-6
+  minioServiceRegion: #ca-central-1
+  minioServiceHost: #s3.amazonaws.com
