--- a/helm/deployment-specifics/rds-s3/rds-and-s3/kubeflow-pipelines/values.yaml
+++ b/helm/deployment-specifics/rds-s3/rds-and-s3/kubeflow-pipelines/values.yaml
@@ -1,8 +1,8 @@
 rds:
-  dbHost: #jsitu-kubeflow-db.xxxxxx.ca-central-1.rds.amazonaws.com
+  dbHost: #kubeflow-db.xxxxxxxxxx.ca-central-1.rds.amazonaws.com
   mlmdDb: #metadb
 
 s3:
-  bucketName: #jsitu-s3-bucket-6
+  bucketName: #s3-bucket
   minioServiceRegion: #ca-central-1
   minioServiceHost: #s3.amazonaws.com
