--- a/helm/deployment-specifics/rds-s3/s3-only/kubeflow-pipelines/templates/ConfigMap/workflow-controller-configmap-kubeflow-ConfigMap.yaml
+++ b/helm/deployment-specifics/rds-s3/s3-only/kubeflow-pipelines/templates/ConfigMap/workflow-controller-configmap-kubeflow-ConfigMap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
   config: "{\nartifactRepository:\n{\n    s3: {\n        bucket: {{ .Values.s3.bucketName }},\n\
-    \        keyPrefix: artifacts,\n        endpoint: {{ .Values.s3.minioServiceHost }},\n        insecure:\
+    \        keyPrefix: artifacts,\n        endpoint: s3.amazonaws.com,\n        insecure:\
     \ true,\n        accessKeySecret: {\n            name: mlpipeline-minio-artifact,\n\
     \            key: accesskey\n        },\n        secretKeySecret: {\n        \
     \    name: mlpipeline-minio-artifact,\n            key: secretkey\n        }\n\
