finished s3-only deployment option helm charts.

--- a/helm/deployment-specifics/rds-s3/s3-only/kubeflow-pipelines/values.yaml
+++ b/helm/deployment-specifics/rds-s3/s3-only/kubeflow-pipelines/values.yaml
@@ -1,4 +1,4 @@
 s3:
   bucketName: #s3-bucket
-  minioServiceRegion: #ca-central-1
+  minioServiceRegion: #eu-west-2
   minioServiceHost: #s3.amazonaws.com
