--- a/charts/common/knative-serving/templates/ConfigMap/config-network-knative-serving-ConfigMap.yaml
+++ b/charts/common/knative-serving/templates/ConfigMap/config-network-knative-serving-ConfigMap.yaml
@@ -10,7 +10,7 @@ data:
     # This block is not actually functional configuration,
     # but serves to illustrate the available configuration
     # options and document them in a way that is accessible
-    # to users that `kubectl edit` this config map.
+    # to users that "kubectl edit" this config map.
     #
     # These sample configuration options may be copied out of
     # this example block and unindented to be in the data block
@@ -61,7 +61,7 @@ data:
 
     # domain-template specifies the golang text template string to use
     # when constructing the Knative service's DNS name. The default
-    # value is "{{.Name}}.{{.Namespace}}.{{.Domain}}".
+    # value is "{{`{{.Name}}`}}.{{`{{.Namespace}}`}}.{{`{{.Domain}}`}}".
     #
     # Valid variables defined in the template include Name, Namespace, Domain,
     # Labels, and Annotations. Name will be the result of the tagTemplate
@@ -71,24 +71,24 @@ data:
     # the domain name generated is problematic for wildcard certificates
     # that only support a single level of domain name added to the
     # certificate's domain. In those cases you might consider using a value
-    # of "{{.Name}}-{{.Namespace}}.{{.Domain}}", or removing the Namespace
+    # of "{{`{{.Name}}`}}-{{`{{.Namespace}}`}}.{{`{{.Domain}}`}}", or removing the Namespace
     # entirely from the template. When choosing a new value be thoughtful
     # of the potential for conflicts - for example, when users choose to use
-    # characters such as `-` in their service, or namespace, names.
-    # {{.Annotations}} or {{.Labels}} can be used for any customization in the
+    # characters such as "-" in their service, or namespace, names.
+    # {{`{{.Annotations}}`}} or {{`{{.Labels}}`}} can be used for any customization in the
     # go template if needed.
     # We strongly recommend keeping namespace part of the template to avoid
     # domain name clashes:
-    # eg. '{{.Name}}-{{.Namespace}}.{{ index .Annotations "sub"}}.{{.Domain}}'
+    # eg. '{{`{{.Name}}`}}-{{`{{.Namespace}}`}}.{{`{{ index .Annotations "sub"}}`}}.{{`{{.Domain}}`}}'
     # and you have an annotation {"sub":"foo"}, then the generated template
     # would be {Name}-{Namespace}.foo.{Domain}
-    domain-template: "{{.Name}}.{{.Namespace}}.{{.Domain}}"
+    domain-template: "{{`{{.Name}}`}}.{{`{{.Namespace}}`}}.{{`{{.Domain}}`}}"
 
     # tagTemplate specifies the golang text template string to use
     # when constructing the DNS name for "tags" within the traffic blocks
     # of Routes and Configuration.  This is used in conjunction with the
     # domainTemplate above to determine the full URL for the tag.
-    tag-template: "{{.Tag}}-{{.Name}}"
+    tag-template: "{{`{{.Tag}}`}}-{{`{{.Name}}`}}"
 
     # Controls whether TLS certificates are automatically provisioned and
     # installed in the Knative ingress to terminate external TLS connection.
@@ -136,7 +136,7 @@ data:
     # mesh-compatibility-mode indicates whether consumers of network plugins
     # should directly contact Pod IPs (most efficient), or should use the
     # Cluster IP (less efficient, needed when mesh is enabled unless
-    # `enable-mesh-pod-addressability`, above, is set).
+    # "enable-mesh-pod-addressability", above, is set).
     # Permitted values are:
     #  - "auto" (default): automatically determine which mesh mode to use by trying Pod IP and falling back to Cluster IP as needed.
     #  - "enabled": always use Cluster IP and do not attempt to use Pod IPs.
