--- a/charts/common/knative-serving/templates/ConfigMap/config-observability-knative-serving-ConfigMap.yaml
+++ b/charts/common/knative-serving/templates/ConfigMap/config-observability-knative-serving-ConfigMap.yaml
@@ -10,7 +10,7 @@ data:
     # This block is not actually functional configuration,
     # but serves to illustrate the available configuration
     # options and document them in a way that is accessible
-    # to users that `kubectl edit` this config map.
+    # to users that "kubectl edit" this config map.
     #
     # These sample configuration options may be copied out of
     # this example block and unindented to be in the data block
@@ -56,7 +56,7 @@ data:
     #   PodIP         string  // IP of the pod hosting the revision
     # }
     #
-    logging.request-log-template: '{"httpRequest": {"requestMethod": "{{.Request.Method}}", "requestUrl": "{{js .Request.RequestURI}}", "requestSize": "{{.Request.ContentLength}}", "status": {{.Response.Code}}, "responseSize": "{{.Response.Size}}", "userAgent": "{{js .Request.UserAgent}}", "remoteIp": "{{js .Request.RemoteAddr}}", "serverIp": "{{.Revision.PodIP}}", "referer": "{{js .Request.Referer}}", "latency": "{{.Response.Latency}}s", "protocol": "{{.Request.Proto}}"}, "traceId": "{{index .Request.Header "X-B3-Traceid"}}"}'
+    logging.request-log-template: '{"httpRequest": {"requestMethod": "{{`{{.Request.Method}}`}}", "requestUrl": "{{`{{js .Request.RequestURI}}`}}", "requestSize": "{{`{{.Request.ContentLength}}`}}", "status": {{`{{.Response.Code}}`}}, "responseSize": "{{`{{.Response.Size}}`}}", "userAgent": "{{`{{js .Request.UserAgent}}`}}", "remoteIp": "{{`{{js .Request.RemoteAddr}}`}}", "serverIp": "{{`{{.Revision.PodIP}}`}}", "referer": "{{`{{js .Request.Referer}}`}}", "latency": "{{`{{.Response.Latency}}`}}s", "protocol": "{{`{{.Request.Proto}}`}}"}, "traceId": "{{`{{index .Request.Header "X-B3-Traceid"}}`}}"}'
 
     # If true, the request logging will be enabled.
     # NB: up to and including Knative version 0.18 if logging.request-log-template is non-empty, this value
