roll back to v1.5.1 version dex

--- a/charts/common/dex/templates/Deployment/dex-auth-Deployment.yaml
+++ b/charts/common/dex/templates/Deployment/dex-auth-Deployment.yaml
@@ -28,7 +28,7 @@ spec:
         envFrom:
         - secretRef:
             name: dex-oidc-client
-        image: ghcr.io/dexidp/dex:v2.31.2
+        image: quay.io/dexidp/dex:v2.24.0
         name: dex
         ports:
         - containerPort: 5556
