--- a/charts/common/dex/crds/authcodes.dex.coreos.com-CustomResourceDefinition.yaml
+++ b/charts/common/dex/crds/authcodes.dex.coreos.com-CustomResourceDefinition.yaml
@@ -1,4 +1,4 @@
-apiVersion: apiextensions.k8s.io/v1
+apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: authcodes.dex.coreos.com
@@ -10,11 +10,4 @@ spec:
     plural: authcodes
     singular: authcode
   scope: Namespaced
-  versions:
-  - name: v1
-    schema:
-      openAPIV3Schema:
-        type: object
-        x-kubernetes-preserve-unknown-fields: true
-    served: true
-    storage: true
+  version: v1
