--- a/charts/common/kserve/templates/ClusterServingRuntime/kserve-sklearnserver-ClusterServingRuntime.yaml
+++ b/charts/common/kserve/templates/ClusterServingRuntime/kserve-sklearnserver-ClusterServingRuntime.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
   - args:
-    - --model_name={{.Name}}
+    - --model_name={{`{{.Name}}`}}
     - --model_dir=/mnt/models
     - --http_port=8080
     image: kserve/sklearnserver:v0.8.0
