--- a/charts/common/kserve/templates/ClusterServingRuntime/kserve-tensorflow-serving-ClusterServingRuntime.yaml
+++ b/charts/common/kserve/templates/ClusterServingRuntime/kserve-tensorflow-serving-ClusterServingRuntime.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
   - args:
-    - --model_name={{.Name}}
+    - --model_name={{`{{.Name}}`}}
     - --port=9000
     - --rest_api_port=8080
     - --model_base_path=/mnt/models
