finalize tf build workflow

--- a/.github/workflows/terraform-vanilla-test.yaml
+++ b/.github/workflows/terraform-vanilla-test.yaml
@@ -8,8 +8,7 @@ on:
       - iaac/terraform/kubernetes-addons/**
       - iaac/terraform/utils/**
     branches:
-      # - main
-      - terraform # todo: revert back to main
+      - main
 
   workflow_dispatch:
 
